--- a/ativacao.html
+++ b/ativacao.html
@@ -184,7 +184,7 @@
             const container = document.getElementById("container");
 
             if (mensagemTexto && mensagemTexto.toLowerCase().includes("ativada")) {
-              const appUrl = `https://datacerta.netlify.app/login.html?id=${idScript}`;
+              const appUrl = `https://datacertaapp.github.io/controledevalidade/aplicativo.html?id=${idScript}`;
               container.innerHTML = `
                 <h2 style="color:#0d283d;margin-bottom:15px;">✅ Planilha ativada com sucesso!</h2>
                 <p style="margin-bottom: 10px;">Clique no botão abaixo para copiar o link do seu app:</p>
