--- a/aplicativo.html
+++ b/aplicativo.html
@@ -37,7 +37,7 @@
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
       width: 100%;
       max-width: 400px;
-      margin-top: 60px;
+      margin-top: 10px;
     }
     h2 {
       color: black;
@@ -73,6 +73,11 @@
       background-color: #2c3e50;
       cursor: not-allowed;
     }
+
+    header{
+      color: #2c3e50;
+      font-size: 40px;
+    }
     #mensagem {
       margin-top: 15px;
       font-weight: bold;
@@ -102,6 +107,7 @@
   </style>
 </head>
 <body>
+  <header> DataCerta </header>
 
   <div class="container">
     <h2>CONTROLE DE VALIDADE</h2>
