--- a/aplicativo.html
+++ b/aplicativo.html
@@ -77,6 +77,8 @@
     header{
       color: #2c3e50;
       font-size: 40px;
+      font-weigth: bold;
+      margin-bottom: 30px;
     }
     #mensagem {
       margin-top: 15px;
