--- a/aplicativo.html
+++ b/aplicativo.html
@@ -77,9 +77,9 @@
     header{
       color: #2c3e50;
       font-size: 40px;
-      font-weigth: bold;
+      font-weight: bold;
       margin-bottom: 30px;
-    }
+    
     #mensagem {
       margin-top: 15px;
       font-weight: bold;
