--- a/aplicativo.html
+++ b/aplicativo.html
@@ -79,6 +79,7 @@
       font-size: 40px;
       font-weight: bold;
       margin-bottom: 30px;
+    }
     
     #mensagem {
       margin-top: 15px;
@@ -109,7 +110,7 @@
   </style>
 </head>
 <body>
-  <header> DataCerta </header>
+  <header> DataCerta 📊 </header>
 
   <div class="container">
     <h2>CONTROLE DE VALIDADE</h2>
