--- a/login.html
+++ b/login.html
@@ -18,7 +18,6 @@
       justify-content: flex-start;
       min-height: 100vh;
     }
-    
     #login-container {
       background: white;
       padding: 1rem;
@@ -27,10 +26,8 @@
       width: 100%;
       max-width: 320px;
       margin-top: 100px;
-      height: 400px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
     }
     input {
@@ -48,6 +45,7 @@
       font-size: 1rem;
       cursor: pointer;
       border-radius: .25rem;
+      margin-top: 0.5rem;
     }
     .error {
       color: red;
@@ -60,12 +58,10 @@
       #login-container { padding: .75rem; }
       input, button { padding: .5rem; font-size: .875rem; }
     }
-
     h2 {
       margin-top: 0;
       margin-bottom: 40px;
     }
-
     footer {
       text-align: center;
       font-size: 12px;
@@ -99,16 +95,23 @@
   </div>
 
   <script>
-    // Captura o parâmetro 'id' da URL
     const params = new URLSearchParams(window.location.search);
     const planilhaId = params.get("id");
+    const container = document.getElementById("login-container");
 
-    // Se não houver 'id', redireciona para aplicativo.html
     if (!planilhaId) {
-      window.location.href = "aplicativo.html";
+      document.getElementById("error-msg").textContent = "ID da planilha não encontrado. Acesse pelo link correto.";
     }
 
-    // Monta a URL do Apps Script usando o ID (pode ser null, mas página redireciona)
+    if (sessionStorage.getItem("usuarioLogado") && planilhaId) {
+      const btnIrApp = document.createElement("button");
+      btnIrApp.textContent = "✅ Ir para o App";
+      btnIrApp.onclick = () => {
+        window.location.href = `aplicativo.html?id=${planilhaId}`;
+      };
+      container.appendChild(btnIrApp);
+    }
+
     const scriptUrl = `https://script.google.com/macros/s/${planilhaId}/exec`;
 
     async function login() {
@@ -123,8 +126,8 @@
 
       const query = new URLSearchParams({
         action: "login",
-        username: username,
-        password: password
+        username,
+        password
       });
 
       try {
@@ -134,7 +137,6 @@
         if (result.status === "Sucesso") {
           sessionStorage.setItem("usuarioLogado", username);
           sessionStorage.setItem("planilhaId", planilhaId);
-          // Redireciona para aplicativo.html após login bem-sucedido
           window.location.href = `aplicativo.html?id=${planilhaId}`;
         } else {
           errorMsg.textContent = result.mensagem;
