--- a/ativacao.html
+++ b/ativacao.html
@@ -190,7 +190,7 @@
                 <p style="margin-bottom: 10px;">Clique no botão abaixo para copiar o link do seu app:</p>
                 <input id="linkGerado" value="${appUrl}" readonly style="width:100%;padding:10px;font-size:14px;border:1px solid #ccc;border-radius:5px;margin-bottom:10px;">
                 <button onclick="copiarLink()" style="width: 100%; margin-bottom:10px; padding:12px; font-size:16px; border-radius:5px; border:none; background-color:#0d283d; color:white; cursor:pointer;">📋 Copiar Link</button>
-                <a href="${appUrl}" target="_blank" style="width: 100%; display: inline-block;">
+                <a href="${appUrl}" target="_blank" style="width: 100%; text-decoration:none ; display: inline-block;">
                   <button style="width: 100%; padding:12px; font-size:16px; border-radius:5px; border:none; background-color:#1ba755; color:white; cursor:pointer;">🚀 Abrir App Agora</button>
                 </a>
               `;
