--- a/login.html
+++ b/login.html
@@ -46,6 +46,7 @@
       cursor: pointer;
       border-radius: .25rem;
       margin-top: 0.5rem;
+      margin-bottom: 30px;
     }
     .error {
       color: red;
@@ -71,11 +72,14 @@
       bottom: 10px;
       left: 0;
       width: 100%;
+      margin-bottom: 10px;
+
 
     }
     footer a {
       color: inherit;
       text-decoration: none;
+      margin: 0 10px;
     }
     .info-msg {
       font-size: 12px;
@@ -162,7 +166,10 @@
   </script>
 
   <footer>
-    <a href="privacidade.html" target="_blank">Política de Privacidade</a>
-  </footer>
+    <a href="privacidade.html" target="_blank" style="margin-right: 10px;">Política de Privacidade</a>
+    |
+    <a href="termo.html" target="_blank" style="margin-left: 10px;">Termo de uso e Condições</a>
+   </footer>
+
 </body>
 </html>
