--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
   <footer>
     <a href="privacidade.html" target="_blank" style="margin-right: 10px;">Política de Privacidade</a>
     |
-    <a href="termo.html" target="_blank" style="margin-left: 10px;">Termo de uso e Condições</a>
+    <a href="termo_login.html" target="_blank" style="margin-left: 10px;">Termo de uso e Condições</a>
    </footer>
 
 </body>
