--- a/page.html
+++ b/page.html
@@ -211,15 +211,18 @@
       background: #1ba755;
       color: white;
       text-align: center;
-      padding: 1rem;
+      padding: 0.8rem 1rem;
       font-size: 1rem;
       z-index: 1000;
+      line-height: 1.4;
     }
     .call-fixo a {
       color: white;
       font-weight: bold;
       text-decoration: underline;
-      
+      display: inline-block;
+      font-size: 1.1rem;
+      font-weight: bold;
     }
     @media (max-width: 768px) {
       .call-fixo {
@@ -322,8 +325,10 @@
   </section>
 
   <div class="call-fixo">
-    Quero evitar perdas e multas com o DataCerta. <a href="#botao-comprar">Ativar agora</a>
+   <div>Quero evitar perdas e multas com o DataCerta.</div>
+   <a href="#botao-comprar">Ativar agora</a>
   </div>
+
 
   <footer>
     <div class="social">
