--- a/page.html
+++ b/page.html
@@ -271,7 +271,7 @@
 
     <div class="video-explicativo">
       <h3>Assista ao vídeo e veja como o DataCerta funciona</h3>
-      <iframe src="https://www.youtube.com/watch?v=E1oG3qpqyew" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/E1oG3qpqyew" allowfullscreen></iframe>
     </div>
 
     <div class="como-funciona">
