--- a/page.html
+++ b/page.html
@@ -299,7 +299,7 @@
 
 
     <div class="cta">
-      <a href="#" id="botao-comprar">Quero Agora</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Quero Agora</a>
     </div>
 
     <div class="preco-ancorado">
@@ -343,7 +343,7 @@
 
   <div class="call-fixo">
    <div>Quero evitar perdas e multas com o DataCerta.</div>
-   <a href="#botao-comprar">Ativar agora</a>
+   <a href="https://pay.hotmart.com/S99720580F">Ativar agora</a>
   </div>
 
 
