--- a/page.html
+++ b/page.html
@@ -299,7 +299,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 
     <div class="video-explicativo">
       <h3>Assista ao vídeo e veja como o DataCerta funciona</h3>
-      <iframe src="https://www.youtube.com/embed/FNgFw7OVEyY" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/E1oG3qpqyew" allowfullscreen></iframe>
     </div>
 
     <div class="como-funciona">
