--- a/page.html
+++ b/page.html
@@ -28,7 +28,7 @@ fbq('init', '1033442545012715');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
   
@@ -121,7 +121,7 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
       transition: background-color 0.3s;
     }
     .cta a:hover {
-      background-color: rgb(179, 6, 6);
+      background-color: rgb(24, 172, 103);
     }
     .video-explicativo {
       margin-top: 3rem;
@@ -267,6 +267,7 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
         display: block;
       }
     }
+  
   </style>
 </head>
 <body>
@@ -278,6 +279,19 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
     </h1>
     <p>Chega de perdas silenciosas. Tenha o controle total da validade do seu estoque, direto no celular.</p>
   </header>
+<div style="background: #a50f0f; color: white; padding: 2rem; text-align: center;">
+  <h2 style="font-size: 1.8rem; margin-bottom: 0.5rem;">
+    Descubra como Mercados, Padarias, Farmácias, Agropecuarias... deixaram de perder R$ 200 até R$ 5.000 por mês com produtos vencidos!
+  </h2>
+  <p style="font-size: 1rem; margin: 0 auto; max-width: 800px;">
+    Não espere o prejuízo chegar. Use o DataCerta e controle tudo pelo celular — sem instalar nada e sem pagar mensalidade.
+  </p>
+</div>
+
+<div class="cta">
+      <a href="#video-explicativo" id="botao-comprar">Clique aqui para ver como funciona</a>
+    </div>
+
 
   <section>
     <h2>Você já perdeu dinheiro com produtos vencidos?</h2>
@@ -297,9 +311,13 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
       <p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
     </div>
 
-    <div class="video-explicativo">
-      <h3>Assista ao vídeo e veja como o DataCerta funciona</h3>
+    <div class="video-explicativo" id="video-explicativo">
+      <h3>Assista ao vídeo e veja como o DataCerta funciona na pratica</h3>
       <iframe src="https://www.youtube.com/embed/E1oG3qpqyew" allowfullscreen></iframe>
+    </div>
+
+    <div class="cta">
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">Gostei! Quero Agora</a>
     </div>
 
     <div class="como-funciona">
@@ -320,10 +338,10 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
       <div class="benefit"><span>🔒</span> Segurança com proteção de senha avançada</div>
       <div class="benefit"><span>💸</span> Pagamento único. Sem mensalidade</div>
     </div>
-
    <div style="text-align: center; margin-top: 2rem;">
      <img class="svg"  src="app.svg" alt="App DataCerta" style="max-width: 100%; height: auto; width: 550px;">
    </div>
+
 
 
     <div class="cta">
@@ -337,6 +355,11 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
 
     <div class="selo-garantia">
       Garantia de 7 dias: satisfação ou seu dinheiro de volta!
+    </div>
+
+    <div class="contador" id="contadorPlanilhas">
+      Mais de <strong id="numeroPlanilhas">450</strong> planilhas ativas em todo o Brasil. <br>
+      Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br>em mais de 20 estados.
     </div>
 
     <div class="faq">
