--- a/page2.html
+++ b/page2.html
@@ -289,7 +289,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 </div>
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Comece agora mesmo a reduzir duas perdas</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Comece agora mesmo a reduzir suas perdas</a>
     </div>
 
 
