--- a/page2.html
+++ b/page2.html
@@ -356,7 +356,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </div>
 
     <div class="contador" id="contadorPlanilhas">
-      Mais de <strong id="numeroPlanilhas">50</strong> sistema DataCerto ativos em todo o Brasil. <br>
+      Mais de <strong id="numeroPlanilhas">50</strong> sistemas DataCerta ativos em todo o Brasil. <br>
       Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br>em mais de 20 estados.
     </div>
 
