--- a/page2.html
+++ b/page2.html
@@ -289,35 +289,33 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 </div>
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Comece agora mesmo a reduzir suas perdas</a>
+      <a href="#video-explicativo" id="botao-comprar">CLIQUE AQUI E VEJA COMO É SIMPLES O DataCerta </a>
     </div>
 
 
   <section>
-    <h2>Produtos vencidos custam mais caro do que possa imaginar</h2>
+    <h2>Você já perdeu dinheiro com produtos vencidos?</h2>
 
     <div class="problema">
-      <p>Pequenos comércios, como mercados, padarias e farmácias, perdem centenas de reais todos os meses por não controlarem as validades corretamente.</p>
+      <p>Você não está sozinho. Pequenos comércios perdem centenas de reais todos os meses por não controlarem corretamente as datas de validade.</p>
       <p>Isso causa prejuízos invisíveis, desperdício de mercadoria, problemas com clientes e até riscos com órgãos fiscalizadores como Vigilância Sanitária ou Procon.</p>
       <p>Além disso, existem pessoas que entram na sua loja só pra caçar produto vencido. Quando acham, você perde duas vezes: é obrigado a dar outro produto de graça e ainda descartar o vencido.</p>
     </div>
 
     <div class="solucao">
       <h3>Com o DataCerta, você nunca mais será pego de surpresa</h3>
-      <p>Você controla tudo pelo celular. Receba alertas por e-mail antes que os produtos vençam e acompanhe tudo em um painel intuitivo.</p>
-      <ul>
-        <li>📱 Acesse pelo celular, sem precisar de app</li>
-        <li>📧 Alertas por e-mail para cada setor</li>
-        <li>📊 Dashboard com vendas, perdas e relatórios</li>
-        <li>🔒 Segurança avançada para suas senhas</li>
-        <li>💸 Pagamento único, sem mensalidades</li>
-      </ul>
+      <p>Registre validades diretamente do celular, sem instalar nada. Basta acessar o app por um link exclusivo. Se preferir, pode usar a planilha direto no computador também.</p>
+      <p>Receba alertas por e-mail antes que os produtos vençam — e o melhor: cada responsável recebe somente o que é do seu setor.</p>
+      <p>Veja tudo em um painel fácil de entender: vendas, perdas, produtos vencidos e até comparativo entre setores.</p>
+      <p>Suas senhas são protegidas com segurança avançada, para ninguém acessar sem autorização. Tudo pensado para ser simples, seguro e acessível.</p>
+      <p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
     </div>
 
-      <iframe id="comentarios" src="comentarios.html" 
+    <iframe id="comentarios" src="comentarios.html" 
         style="width:100%; max-width:650px; height:850px; border:none; margin: 2rem auto; display: block;"
         title="Comentários simulados estilo Facebook">
-      </iframe>
+    </iframe>
+
 
     <div class="video-explicativo" id="video-explicativo">
       <h3>Assista ao vídeo e veja como o DataCerta funciona na pratica</h3>
@@ -325,10 +323,10 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </div>
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">Gostei! Quero Agora</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">QUERO PARAR DE PERDER <BR>COM PRODUTOS VENCIDOS AGORA</a>
     </div>
 
-
+    
     <div class="benefits">
       <div class="benefit"><span>📦</span> Acesso via celular, sem instalar nada</div>
       <div class="benefit"><span>📧</span> Alertas por e-mail setorizados</div>
@@ -343,7 +341,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Quero Agora</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">QUERO COMPRAR AGORA</a>
     </div>
 
     <div class="preco-ancorado">
@@ -356,11 +354,9 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </div>
 
     <div class="contador" id="contadorPlanilhas">
-      Mais de <strong id="numeroPlanilhas">50</strong> sistemas DataCerta ativos em todo o Brasil. <br>
+      Mais de <strong id="numeroPlanilhas">50</strong> planilhas ativas em todo o Brasil. <br>
       Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br>em mais de 20 estados.
     </div>
-
-
 
     <div class="faq">
       <h3>Perguntas Frequentes</h3>
