--- a/page.html
+++ b/page.html
@@ -281,7 +281,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
   </header>
 <div style="background: #a50f0f; color: white; padding: 2rem; text-align: center;">
   <h2 style="font-size: 1.8rem; margin-bottom: 0.5rem;">
-    Descubra como comércios como mercados, padarias e farmácias estão evitando prejuízos de R$ 200 a R$ 1.000 por mês com produtos vencidos!
+    Controle a validade do seu estoque pelo celular e evite perdas de até R$1.000/mês.
   </h2>
   <p style="font-size: 1rem; margin: 0 auto; max-width: 800px;">
     Não espere o prejuízo chegar. Use o DataCerta e controle tudo pelo celular — sem instalar nada e sem pagar mensalidade.
@@ -289,7 +289,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 </div>
 
     <div class="cta">
-      <a href="#video-explicativo" id="botao-comprar">Clique aqui para ver como funciona</a>
+      <a href="#video-explicativo" id="botao-comprar">CLIQUE AQUI E VEJA COMO É SIMPLES O DataCerta </a>
     </div>
 
 
@@ -311,9 +311,10 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       <p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
     </div>
 
-    <div class="cta">
-      <a href="#comentarios" id="botao-comentario">Veja o que dizem alguns dos nossos clientes</a>
-    </div>
+    <iframe id="comentarios" src="comentarios.html" 
+        style="width:100%; max-width:650px; height:850px; border:none; margin: 2rem auto; display: block;"
+        title="Comentários simulados estilo Facebook">
+    </iframe>
 
 
     <div class="video-explicativo" id="video-explicativo">
@@ -322,20 +323,10 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </div>
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">Gostei! Quero Agora</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">QUERO PARAR DE PERDER <BR>COM PRODUTOS VENCIDOS AGORA</a>
     </div>
 
-    <div class="como-funciona">
-      <h3>Como funciona na prática:</h3>
-      <ol>
-        <li>Ative a planilha com seu e-mail e número de compra.</li>
-        <li>Acesse o app direto no navegador do celular.</li>
-        <li>Registre o produto, validade, quantidade e setor.</li>
-        <li>O sistema envia alertas personalizados por e-mail.</li>
-        <li>Acompanhe vendas, perdas e produtos vencidos no dashboard.</li>
-      </ol>
-    </div>
-
+    
     <div class="benefits">
       <div class="benefit"><span>📦</span> Acesso via celular, sem instalar nada</div>
       <div class="benefit"><span>📧</span> Alertas por e-mail setorizados</div>
@@ -350,7 +341,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">Quero Agora</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">QUERO COMPRAR AGORA</a>
     </div>
 
     <div class="preco-ancorado">
@@ -366,11 +357,6 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       Mais de <strong id="numeroPlanilhas">50</strong> planilhas ativas em todo o Brasil. <br>
       Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br>em mais de 20 estados.
     </div>
-
-    <iframe id="comentarios" src="comentarios.html" 
-        style="width:100%; max-width:650px; height:850px; border:none; margin: 2rem auto; display: block;"
-        title="Comentários simulados estilo Facebook">
-    </iframe>
 
     <div class="faq">
       <h3>Perguntas Frequentes</h3>
