--- a/page.html
+++ b/page.html
@@ -289,7 +289,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 </div>
 
     <div class="cta">
-      <a href="#video-explicativo" id="botao-comprar">CLIQUE AQUI E VEJA COMO É SIMPLES O DataCerta </a>
+      <a href="#video-explicativo" id="botao-comprar">VEJA COMO FUNCIONA E COMPRE COM DESCONTO</a>
     </div>
 
 
@@ -311,10 +311,19 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       <p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
     </div>
 
+    <h3 style="text-align: center; font-size: 1.5rem;">Veja o que comerciantes estão dizendo 👇</h3>
+
+
     <iframe id="comentarios" src="comentarios.html" 
         style="width:100%; max-width:650px; height:850px; border:none; margin: 2rem auto; display: block;"
         title="Comentários simulados estilo Facebook">
     </iframe>
+
+    <p style="text-align: center; margin-top: 2rem;">
+      😰 Perder produto é ruim. Mas perder cliente ou ser multado é ainda pior.  
+      Veja no vídeo como evitar isso com o DataCerta.
+    </p>
+
 
 
     <div class="video-explicativo" id="video-explicativo">
@@ -322,8 +331,12 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       <iframe src="https://www.youtube.com/embed/E1oG3qpqyew" allowfullscreen></iframe>
     </div>
 
+    <p style="color: red; text-align: center; font-weight: bold;">
+     ⚠️ Promoção por tempo limitado! Últimos dias com acesso vitalício por R$ 147,00.
+    </p>
+
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">QUERO PARAR DE PERDER <BR>COM PRODUTOS VENCIDOS AGORA</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar-secundario">NÃO QUERO MAIS PERDER DINHEIRO COM VENCIDOS</a></a>
     </div>
 
     
@@ -341,7 +354,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
 
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">QUERO COMPRAR AGORA</a>
+      <a href="https://pay.hotmart.com/S99720580F" id="botao-comprar">NÃO QUERO MAIS PERDER DINHEIRO COM VENCIDOS</a></a>
     </div>
 
     <div class="preco-ancorado">
