--- a/page2.html
+++ b/page2.html
@@ -326,7 +326,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </h1>
     <p>Tenha o controle total da validade do seu estoque, direto no celular.</p>
   </header>
-<div style="background: #fbbc04; color: black; padding: 2rem; text-align: center;">
+<div style="background: rgb(208, 5, 5); color: white; padding: 2rem; text-align: center;">
   <h2 style="font-size: 1.8rem; margin-bottom: 0.5rem;">
     Controle a validade do seu estoque pelo celular e evite perdas de até R$1.000/mês.
   </h2>
