--- a/page2.html
+++ b/page2.html
@@ -126,9 +126,10 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       font-size: 1.2rem;
       text-decoration: none;
       transition: background-color 0.3s;
+      font-weight: bold;
     }
     .cta a:hover {
-      background-color: rgb(24, 172, 103);
+      background-color: RED;
     }
     .ctad {
       margin-top: 2rem;
@@ -413,7 +414,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     </p>
 
     <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">NÃO QUERO MAIS PERDER DINHEIRO COM VENCIDOS</a></a>
+      <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">QUERO COMPRAR COM O DESCONTO AGORA</a></a>
     </div>
 
     <div class="preco-ancorado">
