--- a/page2.html
+++ b/page2.html
@@ -369,7 +369,7 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
     <h3 style="text-align: center; font-size: 1.5rem;">Veja o que comerciantes estão dizendo 👇</h3>
 
 
-    <iframe id="comentarios" src="comentarios.html" 
+    <iframe id="comentarios" src="comentarios2.html" 
         style="width:100%; max-width:650px; height:850px; border:none; margin: 2rem auto; display: block;"
         title="Comentários simulados estilo Facebook">
     </iframe>
