--- a/page2.html
+++ b/page2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DataCerta - Controle de Validade</title>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>DataCerta - Controle de Validade</title>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HPVX473E63"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-HPVX473E63"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -13,8 +14,7 @@
 
   gtag('config', 'G-HPVX473E63');
 </script>
-
-  <!-- Meta Pixel Code -->
+<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -27,12 +27,9 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 fbq('init', '1033442545012715');
 fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
-/></noscript>
+<noscript><img height="1" src="https://www.facebook.com/tr?id=1582949399039529&amp;ev=PageView&amp;noscript=1" style="display:none" width="1"/></noscript>
 <!-- End Meta Pixel Code -->
-  
-  <style>
+<style>
 
 
     body {
@@ -316,165 +313,222 @@ src="https://www.facebook.com/tr?id=1582949399039529&ev=PageView&noscript=1"
       }
     }
   
-  </style>
-</head>
-<body>
+  
 
-  <header>
-    <h1>
-      <img src="logo.png" alt="Logo DataCerta">
+.avatar {
+  margin-right: 1rem;
+  flex-shrink: 0;
+}
+.avatar img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ddd;
+  background-color: #fff;
+}
+</style>
+<style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f6f7;
+    }
+    .comentario {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 1.5rem;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    .avatar {
+      margin-right: 1rem;
+    }
+    .avatar img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .conteudo {
+      flex: 1;
+    }
+    .nome {
+      font-weight: bold;
+      color: #365899;
+      margin: 0;
+    }
+    .texto {
+      margin: 5px 0;
+      white-space: pre-line;
+    }
+    .acoes {
+      color: #93979F;
+      font-size: 0.85rem;
+      margin: 0;
+    }
+  </style></head>
+<body>
+<header>
+<h1>
+<img alt="Logo DataCerta" src="logo.png"/>
       DataCerta
     </h1>
-    <p>Tenha o controle total da validade do seu estoque, direto no celular.</p>
-  </header>
+<p>Tenha o controle total da validade do seu estoque, direto no celular.</p>
+</header>
 <div style="background: rgb(208, 5, 5); color: white; padding: 2rem; text-align: center;">
-  <h2 style="font-size: 1.8rem; margin-bottom: 0.5rem;">
+<h2 style="font-size: 1.8rem; margin-bottom: 0.5rem;">
     Controle a validade do seu estoque pelo celular e evite perdas de até R$1.000/mês.
   </h2>
-  <p style="font-size: 1rem; margin: 0 auto; max-width: 800px;">
+<p style="font-size: 1rem; margin: 0 auto; max-width: 800px;">
     Não espere o prejuízo chegar. Use o DataCerta e controle tudo pelo celular — sem instalar nada e sem pagar mensalidade.
   </p>
 </div>
-
-    <div id="contadorTempo" class="contador-destaque">⏳ Carregando...</div>
-
-
-    <p class="p_alerta" id="p_alerta" style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
+<div class="contador-destaque" id="contadorTempo">⏳ Carregando...</div>
+<p class="p_alerta" id="p_alerta" style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
      ⚠️ Promoção por tempo limitado! Válida somente até <span id="dataAtual"></span>.
     </p>
+<div class="ctad">
+<a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">COMPRE COM DESCONTO AGORA</a>
+</div>
+<section>
+<h2>Você já perdeu dinheiro com produtos vencidos?</h2>
+<div class="problema">
+<p>Você não está sozinho. Pequenos comércios perdem centenas de reais todos os meses por não controlarem corretamente as datas de validade.</p>
+<p>Isso causa prejuízos invisíveis, desperdício de mercadoria, problemas com clientes e até riscos com órgãos fiscalizadores como Vigilância Sanitária ou Procon.</p>
+<p>Além disso, existem pessoas que entram na sua loja só pra caçar produto vencido. Quando acham, você perde duas vezes: é obrigado a dar outro produto de graça e ainda descartar o vencido.</p>
+</div>
+<div class="solucao">
+<h3>Com o DataCerta, você nunca mais será pego de surpresa</h3>
+<p>Registre validades diretamente do celular, sem instalar nada. Basta acessar o app por um link exclusivo. Se preferir, pode usar a planilha direto no computador também.</p>
+<p>Receba alertas por e-mail antes que os produtos vençam — e o melhor: cada responsável recebe somente o que é do seu setor.</p>
+<p>Veja tudo em um painel fácil de entender: vendas, perdas, produtos vencidos e até comparativo entre setores.</p>
+<p>Suas senhas são protegidas com segurança avançada, para ninguém acessar sem autorização. Tudo pensado para ser simples, seguro e acessível.</p>
+<p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
+</div>
 
-    <div class="ctad">
-      <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">COMPRE COM DESCONTO AGORA</a>
-    </div>
-
-
-  <section>
-    <h2>Você já perdeu dinheiro com produtos vencidos?</h2>
-
-    <div class="problema">
-      <p>Você não está sozinho. Pequenos comércios perdem centenas de reais todos os meses por não controlarem corretamente as datas de validade.</p>
-      <p>Isso causa prejuízos invisíveis, desperdício de mercadoria, problemas com clientes e até riscos com órgãos fiscalizadores como Vigilância Sanitária ou Procon.</p>
-      <p>Além disso, existem pessoas que entram na sua loja só pra caçar produto vencido. Quando acham, você perde duas vezes: é obrigado a dar outro produto de graça e ainda descartar o vencido.</p>
-    </div>
-
-    <div class="solucao">
-      <h3>Com o DataCerta, você nunca mais será pego de surpresa</h3>
-      <p>Registre validades diretamente do celular, sem instalar nada. Basta acessar o app por um link exclusivo. Se preferir, pode usar a planilha direto no computador também.</p>
-      <p>Receba alertas por e-mail antes que os produtos vençam — e o melhor: cada responsável recebe somente o que é do seu setor.</p>
-      <p>Veja tudo em um painel fácil de entender: vendas, perdas, produtos vencidos e até comparativo entre setores.</p>
-      <p>Suas senhas são protegidas com segurança avançada, para ninguém acessar sem autorização. Tudo pensado para ser simples, seguro e acessível.</p>
-      <p>Você paga apenas uma vez e usa pra sempre. Sem sustos no fim do mês. Sem mensalidades escondidas.</p>
-    </div>
-
-    <h3 style="text-align: center; font-size: 1.5rem;">Veja o que comerciantes estão dizendo 👇</h3>
-
-
-    <iframe id="comentarios" src="comentarios2.html" 
-        style="width:100%; max-width:650px; height:950px; border:none; margin: 2rem auto; display: block;"
-        title="Comentários simulados estilo Facebook">
-    </iframe>
-
-    <p style="text-align: center; margin-top: 2rem;">
+<div class="comentarios" style="max-width:650px; margin: 2rem auto;">
+<h2>👇 Depoimentos de alguns dos nossos clientes 👇 </h2>
+<div class="comentario">
+<div class="avatar"><img alt="João M." src="img/joao.jpg"/></div>
+<div class="conteudo">
+<p class="nome">João M. – Mini Mercado São João, Rio Largo - AL</p>
+<p class="texto">Teve uma vez que um cliente achou um iogurte vencido na prateleira... que vergonha. Depois disso fui atrás de alguma coisa pra ajudar com isso. Achei o DataCerta e resolveu. Agora recebo alerta antes e não passo mais esse aperto.</p>
+</div>
+</div>
+<div class="comentario">
+<div class="avatar"><img alt="Carla S." src="img/carla.jpg"/></div>
+<div class="conteudo">
+<p class="nome">Carla S. – Padaria Central, Sorocaba -SP</p>
+<p class="texto">Antes era tudo na cabeça. Às vezes anotava num caderno, às vezes esquecia... Aí já viu né. Agora eu escaneio o código e recebo o aviso certinho. Me salvou já umas 3x.</p>
+</div>
+</div>
+<div class="comentario">
+<div class="avatar"><img alt="Marcelo R." src="img/marcelo.jpg"/></div>
+<div class="conteudo">
+<p class="nome">Marcelo R. – Agropecuária Boa Vista, Boa Vista - RR</p>
+<p class="texto">Perdi dois sacos de ração mês passado. R$ 180 no lixo. Desde que comecei a usar esse sistema aí, nunca mais perdi nada. Valeu a pena.</p>
+</div>
+</div>
+<div class="comentario">
+<div class="avatar"><img alt="Luciana P." src="img/luciana.jpg"/></div>
+<div class="conteudo">
+<p class="nome">Luciana P. – Supermercado Bom Preço, Maringá - PR</p>
+<p class="texto">Já tomei chamada da Vigilância por causa de coisa vencida... desde que comecei com o DataCerta nunca mais deixei nada passar. O bom é que é simples de usar.</p>
+</div>
+</div>
+<div class="comentario">
+<div class="avatar"><img alt="André F." src="img/andre.jpg"/></div>
+<div class="conteudo">
+<p class="nome">André F. – Empório da Serra, Cubatão - SP</p>
+<p class="texto">Sou meio enrolado com essas coisas de planilha, mas esse aí é tranquilo. Segui o passo a passo e já tô controlando tudo certinho.</p>
+</div>
+</div>
+</div>
+<p style="text-align: center; margin-top: 2rem;">
       😰 Perder produto é ruim. Mas perder cliente ou ser multado é ainda pior.  
       Veja no vídeo como evitar isso com o DataCerta.
     </p>
-
-
-
-    <div class="video-explicativo" id="video-explicativo">
-      <h3>Assista ao vídeo e veja como o DataCerta funciona na pratica</h3>
-      <iframe src="https://www.youtube.com/embed/E1oG3qpqyew" allowfullscreen></iframe>
-    </div>
-
-
-    <div id="contadorTempo2" class="contador-destaque">⏳ Carregando...</div>
-    <p style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
+<div class="video-explicativo" id="video-explicativo">
+<h3>Assista ao vídeo e veja como o DataCerta funciona na pratica</h3>
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/E1oG3qpqyew"></iframe>
+</div>
+<div class="contador-destaque" id="contadorTempo2">⏳ Carregando...</div>
+<p style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
      ⚠️ Promoção por tempo limitado! Válida somente até <span id="dataAtual2"></span>.
     </p>
-
-    <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar-secundario">NÃO QUERO MAIS PERDER DINHEIRO COM VENCIDOS</a></a>
-    </div>
-
-    
-    <div class="benefits">
-      <div class="benefit"><span>📦</span> Acesso via celular, sem instalar nada</div>
-      <div class="benefit"><span>📧</span> Alertas por e-mail setorizados</div>
-      <div class="benefit"><span>📊</span> Dashboard com filtros e relatórios</div>
-      <div class="benefit"><span>🔒</span> Segurança com proteção de senha avançada</div>
-      <div class="benefit"><span>💸</span> Pagamento único. Sem mensalidade</div>
-    </div>
-   <div style="text-align: center; margin-top: 2rem;">
-     <img class="svg"  src="app.svg" alt="App DataCerta" style="max-width: 100%; height: auto; width: 550px;">
-   </div>
-
-   <div id="contadorTempo3" class="contador-destaque">⏳ Carregando...</div>
-   <p style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
+<div class="cta">
+<a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar-secundario">NÃO QUERO MAIS PERDER DINHEIRO COM VENCIDOS</a>
+</div>
+<div class="benefits">
+<div class="benefit"><span>📦</span> Acesso via celular, sem instalar nada</div>
+<div class="benefit"><span>📧</span> Alertas por e-mail setorizados</div>
+<div class="benefit"><span>📊</span> Dashboard com filtros e relatórios</div>
+<div class="benefit"><span>🔒</span> Segurança com proteção de senha avançada</div>
+<div class="benefit"><span>💸</span> Pagamento único. Sem mensalidade</div>
+</div>
+<div style="text-align: center; margin-top: 2rem;">
+<img alt="App DataCerta" class="svg" src="app.svg" style="max-width: 100%; height: auto; width: 550px;"/>
+</div>
+<div class="contador-destaque" id="contadorTempo3">⏳ Carregando...</div>
+<p style="color: red; text-align: center; font-weight: bold; font-size: 30px;">
      ⚠️ Promoção por tempo limitado! Válida somente até <span id="dataAtual3"></span>.
     </p>
-
-    <div class="cta">
-      <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">QUERO COMPRAR COM O DESCONTO AGORA</a></a>
-    </div>
-
-    <div class="preco-ancorado">
+<div class="cta">
+<a href="https://pay.hotmart.com/S99720580F?off=22yllhkz" id="botao-comprar">QUERO COMPRAR COM O DESCONTO AGORA</a>
+</div>
+<div class="preco-ancorado">
       De <s>R$ 297,00</s> por apenas <strong>R$ 100,00</strong> — acesso vitalício, sem mensalidades!
      ou parcele em até <strong>12x de R$ 10,34</strong> no cartão de crédito
      </div>
-
-    <div class="selo-garantia">
+<div class="selo-garantia">
       Garantia de 7 dias: satisfação ou seu dinheiro de volta!
     </div>
-
-    <div class="contador" id="contadorPlanilhas">
-      Mais de <strong id="numeroPlanilhas">50</strong> planilhas ativas em todo o Brasil. <br>
-      Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br>em mais de 20 estados.
+<div class="contador" id="contadorPlanilhas">
+      Mais de <strong id="numeroPlanilhas">50</strong> planilhas ativas em todo o Brasil. <br/>
+      Sistema usado por padarias, farmácias, mercados, agropecuarias, açougues... <br/>em mais de 20 estados.
     </div>
-
-    <div class="faq">
-      <h3>Perguntas Frequentes</h3>
-      <div class="faq-item">
-        <strong>É difícil de usar?</strong>
-        <div class="faq-resposta">Não. O sistema foi feito para ser o mais simples possível. Você pode usar no celular, computador, tablet ou coletor de dados.</div>
-      </div>
-      <div class="faq-item">
-        <strong>O que eu preciso para usar?</strong>
-        <div class="faq-resposta">Apenas um e-mail, acesso à internet e um celular (ou qualquer dispositivo com navegador).</div>
-      </div>
-      <div class="faq-item">
-        <strong>Recebo algum treinamento?</strong>
-        <div class="faq-resposta">Sim! Você receberá um passo a passo completo ensinando como ativar e configurar tudo do seu jeito.</div>
-      </div>
-      <div class="faq-item">
-        <strong>Tem mensalidade?</strong>
-        <div class="faq-resposta">Não. O pagamento é único. Você adquire uma vez e usa pra sempre.</div>
-      </div>
-      <div class="faq-item">
-        <strong>Tenho direito à garantia?</strong>
-        <div class="faq-resposta">Sim! Você tem 7 dias de garantia. Se não gostar por qualquer motivo, pode solicitar reembolso dentro desse prazo.</div>
-      </div>
-    </div>
-  </section>
-
-  <div class="call-fixo">
+<div class="faq">
+<h3>Perguntas Frequentes</h3>
+<div class="faq-item">
+<strong>É difícil de usar?</strong>
+<div class="faq-resposta">Não. O sistema foi feito para ser o mais simples possível. Você pode usar no celular, computador, tablet ou coletor de dados.</div>
+</div>
+<div class="faq-item">
+<strong>O que eu preciso para usar?</strong>
+<div class="faq-resposta">Apenas um e-mail, acesso à internet e um celular (ou qualquer dispositivo com navegador).</div>
+</div>
+<div class="faq-item">
+<strong>Recebo algum treinamento?</strong>
+<div class="faq-resposta">Sim! Você receberá um passo a passo completo ensinando como ativar e configurar tudo do seu jeito.</div>
+</div>
+<div class="faq-item">
+<strong>Tem mensalidade?</strong>
+<div class="faq-resposta">Não. O pagamento é único. Você adquire uma vez e usa pra sempre.</div>
+</div>
+<div class="faq-item">
+<strong>Tenho direito à garantia?</strong>
+<div class="faq-resposta">Sim! Você tem 7 dias de garantia. Se não gostar por qualquer motivo, pode solicitar reembolso dentro desse prazo.</div>
+</div>
+</div>
+</section>
+<div class="call-fixo">
    ⏳ Oferta termina em <span id="contadorMobile">carregando...</span> — <a href="https://pay.hotmart.com/S99720580F?off=22yllhkz">Ativar agora</a>
-  </div>
-
-
-  <footer>
-    <div class="social">
-      <a href="https://www.instagram.com/datacerta.app/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
+</div>
+<footer>
+<div class="social">
+<a href="https://www.instagram.com/datacerta.app/" target="_blank">
+<img alt="Instagram" src="https://cdn-icons-png.flaticon.com/512/174/174855.png"/>
         @datacerta.app
       </a>
-    </div>
-    <br>
-    © 2025 DataCerta. Todos os direitos reservados.<br>
-    <br>
+</div>
+<br/>
+    © 2025 DataCerta. Todos os direitos reservados.<br/>
+<br/>
     Ao continuar, você concorda com nossos <a href="privacidade.html">termos e política de privacidade</a>.
   </footer>
-
-  <script>
+<script>
     // Função para atualizar a data atual em todos os spans
     function atualizarDataAtual() {
       const hoje = new Date();
