--- a/page2.html
+++ b/page2.html
@@ -1155,7 +1155,8 @@ src="https://www.facebook.com/tr?id=1033442545012715&ev=PageView&noscript=1"
     <div class="footer-column">
       <h3>Suporte</h3>
       <ul>
-        <li><a href="mailto:datacerta.contato@gmail.com">datacerta.contato@gmail.com</a></li>
+        <li><a href="https://wa.link/kcv8hz">Whatsapp</a></li>
+        <li><a href="mailto:datacerta.contato@gmail.com">Mande um email: Clique Aqui</a></li>
         <li><a href="instagram.com/datacerta.app">Instagram</a></li>
       </ul>
     </div>
